@@ -56,7 +56,7 @@ PRIMARY KEY ( id )
 
 */
 
-if(($_SESSION['statut']=='scolarité')&&(!getSettingAOui('PeutDonnerAccesBullNotePeriodeCloseScol'))) {
+if(($_SESSION['statut']=='scolarite')&&(!getSettingAOui('PeutDonnerAccesBullNotePeriodeCloseScol'))) {
 	$mess=rawurlencode("Accès interdit !");
 	header("Location: ../accueil.php?msg=$mess");
 	die();
@@ -129,6 +129,29 @@ if((isset($is_posted))&&(isset($id_classe))&&(isset($id_groupe))&&(isset($period
 					else {
 						$msg.="Enregistrement de l'autorisation effectué.<br />";
 
+						$complement_texte_mail="";
+						if(($_SESSION['statut']=='administrateur')||(($_SESSION['statut']=='scolarite')&&(getSettingAOui('PeutDonnerAccesBullAppPeriodeCloseScol')))) {
+							if((isset($_POST['donner_acces_modif_bull_app']))&&($_POST['donner_acces_modif_bull_app']=='y')) {
+								$sql="DELETE FROM matieres_app_delais WHERE id_groupe='$id_groupe' AND periode='$periode';";
+								$menage=mysqli_query($GLOBALS["mysqli"], $sql);
+
+								$mode=isset($_POST['mode']) ? $_POST['mode'] : "proposition";
+								if((isset($mode))&&(!in_array($mode, array('proposition', 'acces_complet')))) {
+									$mode="proposition";
+									$msg.="Mode de validation de la saisie d'appréciation incorrect.<br />On opte pour une 'proposition seule' devant être controlée/validée par la suite.<br />";
+								}
+								$sql="INSERT INTO matieres_app_delais SET id_groupe='$id_groupe', periode='$periode', date_limite='$annee-$mois-$jour $heure:$minute:00', mode='".$mode."';";
+								$res=mysqli_query($GLOBALS["mysqli"], $sql);
+								if(!$res) {
+									$msg.="ERREUR lors de l'insertion de l'enregistrement pour les appréciations des bulletins.<br />";
+								}
+								else {
+									$msg.="Enregistrement de l'autorisation pour les appréciations des bulletins effectué.<br />";
+									$complement_texte_mail="Vous pourrez aussi corriger les appreciations du bulletin.\n\n";
+								}
+							}
+						}
+
 						$envoi_mail_actif=getSettingValue('envoi_mail_actif');
 						if(($envoi_mail_actif!='n')&&($envoi_mail_actif!='y')) {
 							$envoi_mail_actif='y'; // Passer à 'n' pour faire des tests hors ligne... la phase d'envoi de mail peut sinon ensabler.
@@ -200,6 +223,8 @@ if((isset($is_posted))&&(isset($id_classe))&&(isset($id_groupe))&&(isset($period
 								else {
 									$texte_mail.=$message_autorisation_exceptionnelle_bull_note."\n";
 								}
+
+								$texte_mail.=$complement_texte_mail;
 
 								$salutation=(date("H")>=18 OR date("H")<=5) ? "Bonsoir" : "Bonjour";
 								$texte_mail=$salutation." ".$designation_destinataires.",\n\n".$texte_mail."\nCordialement.\n-- \n".$nom_personne_autorisant;
@@ -288,7 +313,10 @@ if(!isset($id_classe)) {
 	if($_SESSION['statut']=='administrateur') {
 		echo " | <a href=\"".$_SERVER['PHP_SELF']."?definir_message=y\" > Définir le message</a>";
 	}
+	echo " | <a href='autorisation_exceptionnelle_saisie_app.php'>Autoriser la modification d'appréciations des bulletins</a>\n";
 	echo "</p>\n";
+
+	echo "<h2>Autoriser la modification de moyennes des bulletins</h2>";
 
 	//echo "<form enctype='multipart/form-data' action='".$_SERVER['PHP_SELF']."' method='post' name='formulaire'>\n";
 
@@ -331,7 +359,11 @@ if(!isset($id_classe)) {
 }
 elseif((!isset($id_groupe))||(!isset($periode))) {
 	echo " | <a href='".$_SERVER['PHP_SELF']."'>Choisir une autre classe</a>\n";
+	echo " | <a href='autorisation_exceptionnelle_saisie_app.php'>Autoriser la modification d'appréciations des bulletins</a>\n";
 	echo "</p>\n";
+
+	echo "<h2>Autoriser la modification de moyennes des bulletins</h2>";
+
 	echo "<p>Pour quel enseignement souhaitez-vous autoriser un enseignant à effectuer des modifications de notes de ses bulletins&nbsp;?</p>\n";
 	$groups=get_groups_for_class($id_classe,"","n");
 
@@ -399,7 +431,10 @@ elseif((!isset($id_groupe))||(!isset($periode))) {
 else {
 	echo " | <a href='".$_SERVER['PHP_SELF']."'>Choisir une autre classe</a>\n";
 	echo " | <a href='".$_SERVER['PHP_SELF']."?id_classe=$id_classe'>Choisir un autre enseignement de la classe</a>\n";
+	echo " | <a href='autorisation_exceptionnelle_saisie_app.php?id_classe=$id_classe'>Autoriser la modification d'appréciations des bulletins</a>\n";
 	echo "</p>\n";
+
+	echo "<h2>Autoriser la modification de moyennes des bulletins</h2>";
 
 	echo "<form enctype='multipart/form-data' action='".$_SERVER['PHP_SELF']."' method='post' name='formulaire'>\n";
 	echo add_token_field();
@@ -471,6 +506,20 @@ else {
 	echo img_calendrier_js("display_date_limite", "img_bouton_display_date_limite");
 
 	echo " à <input type='text' name='display_heure_limite' id='display_heure_limite' size='8' value = \"".$display_heure_limite."\" onKeyDown=\"clavier_heure(this.id,event);\" autocomplete=\"off\" />\n";
+
+	if(($_SESSION['statut']=='administrateur')||(($_SESSION['statut']=='scolarite')&&(getSettingAOui('PeutDonnerAccesBullAppPeriodeCloseScol')))) {
+		echo "<input type='checkbox' name='donner_acces_modif_bull_app' id='donner_acces_modif_bull_app' value='y' /><label for='donner_acces_modif_bull_app'> Donner aussi l'accès à la modification de l'appréciation sur les bulletins associés</label><br />";
+		echo "<div style='margin-left:3em;'>";
+			echo "<input type='radio' name='mode' id='mode_proposition' value='proposition' checked /><label for='mode_proposition'> Permettre la proposition de corrections (<em>proposition qui devront ensuite être validées par un compte scolarité ou administrateur</em>).</label>\n";
+			echo "<br />";
+			if(getSettingAOui('autoriser_correction_bulletin')) {
+				echo "<span style='color:red'>Ce premier mode ne présente pas d'intérêt ici puisque vous avez donné globalement le droit (<em>en administrateur dans Gestion générale/Droits d'accès</em>) de proposer des corrections tant que la période n'est pas complètement close</span>.<br /><span style='color:red'>Seul le mode ci-dessous apporte quelque chose dans votre configuration.</span><br />";
+			}
+			echo "<input type='radio' name='mode' id='mode_acces_complet' value='acces_complet' /><label for='mode_acces_complet'> Permettre la saisie/modification des appréciations sans contrôle de votre part avant validation.</label>\n";
+			echo "<br />";
+		echo "</div>";
+	}
+
 	echo "<input type='submit' name='Valider' value='Valider' />\n";
 	echo "</p>\n";
 
